--- a/WebApi/src/Web/appsettings.json
+++ b/WebApi/src/Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=EMI_ASISTENCIA;Username=postgres;Password=postgres"
-//    "DefaultConnection": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=EMI_ASISTENCIA;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
+    "DefaultConnection": "server=localhost;user=root;password=acceso2023;database=emi_asistencia",
+    "SQLConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
