--- a/BaseDeDatos/docker-compose.yml
+++ b/BaseDeDatos/docker-compose.yml
@@ -3,9 +3,10 @@ version: "3.7"
 
 services:
   servidor-mysql:
-    image: mysql:8.0
+    image: mysql:latest
     environment:
       MYSQL_ROOT_PASSWORD: acceso2023
+    restart: always
     ports:
       - "3306:3306"
     volumes:
