--- a/web-cliente/package.json
+++ b/web-cliente/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@syncfusion/ej2-react-buttons": "^24.2.3",
+    "@syncfusion/ej2-react-grids": "^24.2.4",
+    "@syncfusion/ej2-react-popups": "^24.2.3",
+    "date-fns": "^3.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
