--- a/web-cliente/package.json
+++ b/web-cliente/package.json
@@ -14,6 +14,8 @@
     "@syncfusion/ej2-react-buttons": "^24.2.3",
     "@syncfusion/ej2-react-grids": "^24.2.4",
     "@syncfusion/ej2-react-popups": "^24.2.3",
+    "@syncfusion/ej2-react-schedule": "^24.2.4",
+    "cldr-data": "^36.0.1",
     "date-fns": "^3.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -37,6 +39,7 @@
     "postcss": "^8.4.35",
     "react-hot-toast": "^2.4.1",
     "simplebar-react": "^3.2.4",
+    "systemjs-plugin-json": "^0.3.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
