--- a/web-cliente/package.json
+++ b/web-cliente/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@syncfusion/ej2-react-buttons": "^24.2.3",
+    "@syncfusion/ej2-react-dropdowns": "^24.2.5",
     "@syncfusion/ej2-react-grids": "^24.2.4",
     "@syncfusion/ej2-react-popups": "^24.2.3",
     "@syncfusion/ej2-react-schedule": "^24.2.4",
