--- a/estudiante-mobil/package.json
+++ b/estudiante-mobil/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@ui-kitten/components": "^5.3.1",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "expo-camera": "~14.0.4",
+    "expo-barcode-scanner": "~12.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
