--- a/web-cliente/package.json
+++ b/web-cliente/package.json
@@ -23,6 +23,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.22.0",
     "sort-by": "^1.2.0",
     "vite-plugin-svgr": "^4.2.0"
