--- a/WebApi/src/Application/Application.csproj
+++ b/WebApi/src/Application/Application.csproj
@@ -9,8 +9,9 @@
     <PackageReference Include="Ardalis.GuardClauses" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
-    <PackageReference Include="Mandrill.net" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="QRCoder" />
+    <PackageReference Include="System.Drawing.Common" />
   </ItemGroup>
 
   <ItemGroup>
