--- a/estudiante-mobil/package.json
+++ b/estudiante-mobil/package.json
@@ -16,7 +16,8 @@
     "expo-camera": "~14.0.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
