--- a/WebApi/src/Web/appsettings.Development.json
+++ b/WebApi/src/Web/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=root;password=acceso2023;database=emi_asistencia",
+    "SQLConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
