--- a/WebApi/src/Web/appsettings.json
+++ b/WebApi/src/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=acceso2023;database=emi_asistencia",
+    "DefaultConnection": "server=servidor-mysql;user=root;password=acceso2023;database=emi_asistencia",
     "SQLConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
