--- a/WebApi/Dockerfile
+++ b/WebApi/Dockerfile
@@ -14,4 +14,4 @@ EXPOSE 8080
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /App
 COPY --from=build-env /App/out .
-ENTRYPOINT ["dotnet", "WebApi.Web.dll"]
+ENTRYPOINT ["TZ=America/La_Paz", "dotnet", "WebApi.Web.dll"]
