--- a/estudiante-mobil/package.json
+++ b/estudiante-mobil/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@ui-kitten/components": "^5.3.1",
+    "axios": "^1.6.8",
     "expo": "~50.0.6",
     "expo-barcode-scanner": "~12.9.2",
     "expo-camera": "~14.0.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native": "0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
