--- a/estudiante-mobil/app.json
+++ b/estudiante-mobil/app.json
@@ -39,13 +39,9 @@
       [
         "expo-camera",
         {
-          "cameraPermission": "Permitir $(PRODUCT_NAME) acceder a la camara."
-        }
-      ],
-      [
-        "expo-barcode-scanner",
-        {
-          "cameraPermission": "Permitir $(PRODUCT_NAME) acceder a la camara."
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
         }
       ]
     ],
