--- a/web-cliente/nginx.conf
+++ b/web-cliente/nginx.conf
@@ -10,4 +10,13 @@ server {
 		proxy_pass http://web-api:8080/;
 		proxy_set_header Host $host;
 	}
+
+  # ACME-challenge
+	location ^~ /.well-known/acme-challenge/ {
+			root /var/lib/letsencrypt/webroot;
+	}
+
+	# location / {
+	# 	return 301 https://vislab.center$request_uri;
+	# }
 }
