--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     ports:
       - "80:80"
       - "5173:80"
+    volumes:
+      - /images:/www/media/images
     networks:
       - default
     depends_on:
@@ -19,6 +21,8 @@ services:
     build: './simulador-acceso'
     ports:
       - "5174:80"
+    volumes:
+      - /images:/www/media/images
     networks:
       - default
     depends_on:
@@ -32,6 +36,7 @@ services:
       - "8080:8080"
     volumes:
       - ./assets:/app/assets
+      - /images:/wwwroot/images
     networks:
       - default
     environment:
