--- a/web-cliente/nginx.conf
+++ b/web-cliente/nginx.conf
@@ -1,5 +1,11 @@
 server {
   listen 80;
+
+  location /images/ {
+    root /www/media/;
+    autoindex off;
+  }
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
