--- a/web-cliente/package.json
+++ b/web-cliente/package.json
@@ -19,6 +19,7 @@
     "@syncfusion/ej2-react-dropdowns": "^24.2.5",
     "@syncfusion/ej2-react-grids": "^24.2.4",
     "@syncfusion/ej2-react-inputs": "^24.2.5",
+    "@syncfusion/ej2-react-layouts": "^25.1.37",
     "@syncfusion/ej2-react-popups": "^24.2.3",
     "@syncfusion/ej2-react-schedule": "^24.2.4",
     "cldr-data": "^36.0.1",
