--- a/WebApi/src/Web/appsettings.Development.json
+++ b/WebApi/src/Web/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;user=root;password=acceso2023;database=emi_asistencia",
+//    "DefaultConnection": "server=192.248.161.19;port=3666;user=root;password=acceso2023;database=emi_asistencia",
     "SQLConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
