--- a/WebApi/Directory.Packages.props
+++ b/WebApi/Directory.Packages.props
@@ -33,6 +33,7 @@
     <PackageVersion Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageVersion Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0-beta.2" />
+    <PackageVersion Include="QuestPDF" Version="2024.3.10" />
     <PackageVersion Include="Respawn" Version="6.1.0" />
     <PackageVersion Include="System.Drawing.Common" Version="8.0.2" />
     <PackageVersion Include="Testcontainers.MsSql" Version="3.6.0" />
